@@ -1,3 +1,6 @@
+* Rename Fuse.Ajax.getTransport to Fuse.Ajax.create and Fuse.Ajax.Request#transport to Fuse.Ajax.Request#raw. [jddalton]
+  Note: Backwards compatibility warning.
+
 * Make all namespaces inheritable. [jddalton]
   Example: Fuse.plugin.addNS = ...; Fuse.Dom.addNS('Data');
 
